Added REC logo to categories and recs pages

--- a/categories.html
+++ b/categories.html
@@ -27,9 +27,9 @@
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
       <!-- settings button -right -->
-      <!-- <div class="right menu">
-        <a class="ui item"><i class="fas fa-user-cog"></i></a>
-      </div> -->
+      <div class="right menu">
+        <img src="images/just-rec.png" id="just-rec-logo" alt="Rec Text Logo">
+      </div>
     </div>
 
     <!-- Button Container  -->
