--- a/recs.html
+++ b/recs.html
@@ -37,9 +37,9 @@
       <a class="item" href="index.html">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
-      <!-- <div class="right menu">
-        <a class="ui item"><i class="fas fa-user-cog"></i></a>
-      </div> -->
+      <div class="right menu">
+        <img src="images/just-rec.png" id="just-rec-logo" alt="Rec Text Logo">
+      </div>
     </nav>
 
     <div id="recdPage" class="main">
