Styled navbar and recs page info/table

--- a/categories.html
+++ b/categories.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <div class="ui secondary menu">
+    <div class="ui secondary menu" id="cat-navbar">
       <a class="item" href="index.html">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
