Modified music.js/recs.html to populate table with artist discography data

--- a/recs.html
+++ b/recs.html
@@ -49,33 +49,19 @@
       <div id="carousel"></div>
       <!-- populate area with music info - list of generated artists' albums-->
       <div id="discog">
-        <div id="artist-name">Artist: Bill Evans</div>
-        <div id="song-playing">Now Playing: Nardis</div>
+        <div id="artist-name"></div>
+        <div id="song-playing"></div>
         <div id="album-list">
           <br>
           <p>Like your Rec? Check out more from this artist!</p>
           <hr>
           <table class="ui celled table" id="discog-table">
-            <thead>
+            <thead id="discogTableHead">
               <tr>
                 <th>Album</th>
                 <th>Release Year</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td data-label="album-name">BleepBlorp</td>
-                <td data-label="release-year">YYYY</td>
-              </tr>
-              <tr>
-                <td data-label="album-name">BloopBlop</td>
-                <td data-label="release-year">YYYY</td>
-              </tr>
-              <tr>
-                <td data-label="album-name">MeepMeep</td>
-                <td data-label="release-year">YYYY</td>
-              </tr>
-            </tbody>
           </table>
         </div>
       </div>
